# comp4300

./: .gitignore  README.md
lecture2/: a.out  intro.cpp  students.txt
lecture3/: a.out  lecture3.cpp
lecture4/: CMakeLists.txt
lecture4/.cache/clangd/index/: main.cpp.E7AE8736117900E9.idx
lecture4/src/: configuration.hpp  events.cpp  main.cpp  star.hpp
